[gd_scene load_steps=2 format=2]

[ext_resource path="res://atividade_semana_5.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="resposta_2" type="ColorRect" parent="."]
margin_left = 284.0
margin_top = 42.0
margin_right = 664.0
margin_bottom = 96.0

[node name="label_resposta_2" type="Label" parent="resposta_2"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 381.0
margin_bottom = 53.0
align = 1
valign = 1

[node name="enunciado_2" type="Label" parent="."]
margin_left = -167.0
margin_top = -12.0
margin_right = 383.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 143, 31 )
text = "- Insira novos valores na lista"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 768.0
margin_top = 35.0
margin_right = 1004.0
margin_bottom = 82.0
text = "Exibir lista preenchida "

[node name="dadoUsuario" type="LineEdit" parent="."]
margin_left = 88.0
margin_top = 40.0
margin_right = 146.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 11, 46 )

[node name="Label" type="Label" parent="dadoUsuario"]
margin_left = -36.0
margin_top = 63.0
margin_right = 105.0
margin_bottom = 77.0
text = "Novo dado para a lista"

[node name="enunciado_3" type="Label" parent="."]
margin_left = 19.0
margin_top = 201.0
margin_right = 323.0
margin_bottom = 215.0
text = "- Informe o seu nome"

[node name="enunciado_4" type="Label" parent="."]
margin_left = 30.0
margin_top = 319.0
margin_right = 534.0
margin_bottom = 350.0
text = "- Seu nome:
"

[node name="resposta_4" type="ColorRect" parent="."]
margin_left = 278.0
margin_top = 371.0
margin_right = 658.0
margin_bottom = 431.0

[node name="label_resposta_4" type="Label" parent="resposta_4"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -4.0
margin_right = 377.0
margin_bottom = 58.0
align = 1
valign = 1

[node name="Button3" type="Button" parent="."]
margin_left = 768.0
margin_top = 380.0
margin_right = 1000.0
margin_bottom = 438.0
text = "Exibir nome"

[node name="nomeUsuario" type="LineEdit" parent="."]
margin_left = 280.0
margin_top = 221.0
margin_right = 667.0
margin_bottom = 283.0

[node name="Button2" type="Button" parent="."]
margin_left = 773.0
margin_top = 99.0
margin_right = 1004.0
margin_bottom = 147.0
text = "Incrementar valores da lista"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
